Fixed issue with char case which was breaking the submit guess button, Removed the trimming and padding of puzzle to fix the numbers being shifted and did some css to make eeverything look better

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+.crossword-and-controls {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: auto;
+  justify-content: center;
+  color: white;
+
+}
 .crossword-container {
   padding: 1rem;
+  background-color: black;
+  color: white;
 }
 
 .controls {
@@ -90,4 +101,9 @@
   100% {
     transform: rotate(360deg);
   }
+}
+
+.clues-container {
+  display: flex;
+  flex-direction: column;
 }
